==============================================

New in this Isabelle version
----------------------------

*** General ***

* Discontinued obsolete method fastsimp / tactic fast_simp_tac, which
is called fastforce / fast_force_tac already since Isabelle2011-1.

* Updated and extended "isar-ref" manual, reduced remaining material
in old "ref" manual.


*** Pure ***

* Command "export_code": relative file names are interpreted
relatively to master directory of current theory rather than
the rather arbitrary current working directory.
INCOMPATIBILITY.

* Discontinued obsolete attribute "COMP".  Potential INCOMPATIBILITY,
use regular rule composition via "OF" / "THEN", or explicit proof
structure instead.  Note that Isabelle/ML provides a variety of
operators like COMP, INCR_COMP, COMP_INCR, which need to be applied
with some care where this is really required.


*** HOL ***

* Library/Debug.thy and Library/Parallel.thy: debugging and parallel
execution for code generated towards Isabelle/ML.

* Simproc "finite_Collect" rewrites set comprehensions into pointfree
expressions.

* Quickcheck:

  - added an optimisation for equality premises.
    It is switched on by default, and can be switched off by setting
    the configuration quickcheck_optimise_equality to false.    

* The SMT solver Z3 has now by default a restricted set of directly
supported features. For the full set of features (div/mod, nonlinear
arithmetic, datatypes/records) with potential proof reconstruction
failures, enable the configuration option "z3_with_extensions".
Minor INCOMPATIBILITY.

* Sledgehammer:

  - Added MaSh relevance filter based on machine-learning; see the
    Sledgehammer manual for details.
  - Rationalized type encodings ("type_enc" option).
  - Renamed options:
      max_relevant ~> max_facts
      relevance_thresholds ~> fact_thresholds


*** Document preparation ***

* Default for \<euro> is now based on eurosym package, instead of
slightly exotic babel/greek.


*** System ***
