@@ -151,7 +151,7 @@ code_const "op < \<Colon> int \<Rightarrow> int \<Rightarrow> bool"
 code_const Code_Numeral.int_of
   (SML "IntInf.fromInt")
   (OCaml "_")
-  (Haskell "toInteger")
+  (Haskell "Prelude.toInteger")
   (Scala "!_.as'_BigInt")
   (Eval "_")
 
